Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19349

mysql_install_db: segfault at tmp_file_prefix check

    XMLWordPrintable

Details

    Description

      Reproduce

      touch /tmp/1
      mysql_install_db --basedir=$opt --datadir=./data --defaults-file=$defaults
      

      Result

      #0  0x00000000015b0aea in handle_fatal_signal (sig=0) at /home/midenok/src/mariadb/trunk/src/sql/signal_handler.cc:62
      #1  <signal handler called>
      #2  0x00000000015b0aea in handle_fatal_signal (sig=0) at /home/midenok/src/mariadb/trunk/src/sql/signal_handler.cc:62
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x00007f93f9035535 in __GI_abort () at abort.c:79
      #6  0x00000000007a232b in __sanitizer::Abort() ()
      #7  0x00000000007a09b8 in __sanitizer::Die() ()
      #8  0x000000000078789f in __asan::ReportGenericError(unsigned long, unsigned long, unsigned long, unsigned long, bool, unsigned long, unsigned int, bool) ()
      #9  0x0000000000751c72 in __interceptor_memcmp.part.319 ()
      #10 0x00000000009e17d0 in mysql_rm_tmp_tables () at /home/midenok/src/mariadb/trunk/src/sql/sql_base.cc:8819
      #11 0x00000000007c5bbf in mysqld_main (argc=12, argv=0x615000000150) at /home/midenok/src/mariadb/trunk/src/sql/mysqld.cc:5742
      #12 0x00000000007b9b92 in main (argc=12, argv=0x7ffe4db84e68) at /home/midenok/src/mariadb/trunk/src/sql/main.cc:25
      

      frame 10

      8819          if (!memcmp(file->name, tmp_file_prefix,
      8820                      tmp_file_prefix_length))
      8821          {
      

      (gdb) p file->name
      $1 = 0x62d00005a420 "1"
      

      Cause

      file->name is shorter than tmp_file_prefix_length.

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              midenok Aleksey Midenkov
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h 5m
                  3h 5m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.