MDEV-19349 mysql_install_db: segfault at tmp_file_prefix check