sql/sql_base.cc
@@ -8816,7 +8816,7 @@ my_bool mysql_rm_tmp_tables(void)
     {
       file=dirp->dir_entry+idx;
 
-      if (!memcmp(file->name, tmp_file_prefix,
+      if (!strncmp(file->name, tmp_file_prefix,
                   tmp_file_prefix_length))
       {
         char *ext= fn_ext(file->name);
